Ejercicios de IIA terminados

--- a/Introduccion_IA/busqueda_ciudades_colombia.ipynb
+++ b/Introduccion_IA/busqueda_ciudades_colombia.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
     "    costo += problema.costo_accion(padre.estado, accion)\n",
     "    hijo.costo = costo\n",
     "    hijo.heuristicas = problema.heuristicas[hijo.estado.nombre]\n",
-    "    hijo.valores = {estado: heuristica - hijo.costo for estado, heuristica in hijo.heuristicas.items()}\n",
+    "    hijo.valores = {estado: hijo.costo - heuristica for estado, heuristica in hijo.heuristicas.items()}\n",
     "    if agregar:\n",
     "        padre.hijos.append(hijo)\n",
     "    return hijo\n",
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,7 +232,33 @@
     "                \"Tolú\": {\"SO\": 22, \"SE\": 40}\n",
     "                }\n",
     "    \n",
-    "    heuristicas = {\"Manizales\": {\"Tolú\": 90},\n",
+    "#     heuristicas = {\n",
+    "#         'Manizales': {'Manizales': 0, 'Medellín': 90, 'Santa Fé de Antioquia': 0, 'Dabeiba': 0, 'Chigorodó': 0, 'Arboletes': 0, 'Montería': 0, 'Barbosa': 0, 'Yarumal': 0, 'Cisneros': 0, 'Maceo': 0, 'Remedios': 0, 'Amalfi': 0, 'Caucasia': 0, 'Planeta Rica': 0, 'Shagún': 0, 'Sincelejo': 0, 'Ciénaga de Oro': 0, 'Cereté': 0, 'Covenas': 0, 'Tolú': 0},\n",
+    "#         'Medellín': {'Manizales': 90, 'Medellín': 0, 'Santa Fé de Antioquia': 40, 'Dabeiba': 0, 'Chigorodó': 0, 'Arboletes': 0, 'Montería': 0, 'Barbosa': 40, 'Yarumal': 40, 'Cisneros': 70, 'Maceo': 0, 'Remedios': 0, 'Amalfi': 0, 'Caucasia': 0, 'Planeta Rica': 0, 'Shagún': 0, 'Sincelejo': 0, 'Ciénaga de Oro': 0, 'Cereté': 0, 'Covenas': 0, 'Tolú': 0},\n",
+    "#         'Santa Fé de Antioquia': {'Manizales': 0, 'Medellín': 40, 'Santa Fé de Antioquia': 0, 'Dabeiba': 70, 'Chigorodó': 0, 'Arboletes': 0, 'Montería': 0, 'Barbosa': 0, 'Yarumal': 0, 'Cisneros': 0, 'Maceo': 0, 'Remedios': 0, 'Amalfi': 0, 'Caucasia': 0, 'Planeta Rica': 0, 'Shagún': 0, 'Sincelejo': 0, 'Ciénaga de Oro': 0, 'Cereté': 0, 'Covenas': 0, 'Tolú': 0},\n",
+    "#         'Dabeiba': {'Manizales': 0, 'Medellín': 0, 'Santa Fé de Antioquia': 70, 'Dabeiba': 0, 'Chigorodó': 90, 'Arboletes': 0, 'Montería': 0, 'Barbosa': 0, 'Yarumal': 0, 'Cisneros': 0, 'Maceo': 0, 'Remedios': 0, 'Amalfi': 0, 'Caucasia': 0, 'Planeta Rica': 0, 'Shagún': 0, 'Sincelejo': 0, 'Ciénaga de Oro': 0, 'Cereté': 0, 'Covenas': 0, 'Tolú': 0},\n",
+    "#         'Chigorodó': {'Manizales': 0, 'Medellín': 0, 'Santa Fé de Antioquia': 0, 'Dabeiba': 90, 'Chigorodó': 0, 'Arboletes': 70, 'Montería': 0, 'Barbosa': 0, 'Yarumal': 0, 'Cisneros': 0, 'Maceo': 0, 'Remedios': 0, 'Amalfi': 0, 'Caucasia': 0, 'Planeta Rica': 0, 'Shagún': 0, 'Sincelejo': 0, 'Ciénaga de Oro': 0, 'Cereté': 0, 'Covenas': 0, 'Tolú': 0},\n",
+    "#         'Arboletes': {'Manizales': 0, 'Medellín': 0, 'Santa Fé de Antioquia': 0, 'Dabeiba': 0, 'Chigorodó': 70, 'Arboletes': 0, 'Montería': 40, 'Barbosa': 0, 'Yarumal': 0, 'Cisneros': 0, 'Maceo': 0, 'Remedios': 0, 'Amalfi': 0, 'Caucasia': 0, 'Planeta Rica': 0, 'Shagún': 0, 'Sincelejo': 0, 'Ciénaga de Oro': 0, 'Cereté': 0, 'Covenas': 0, 'Tolú': 0},\n",
+    "#         'Barbosa': {'Manizales': 0, 'Medellín': 40, 'Santa Fé de Antioquia': 0, 'Dabeiba': 0, 'Chigorodó': 0, 'Arboletes': 0, 'Montería': 0, 'Barbosa': 0, 'Yarumal': 0, 'Cisneros': 0, 'Maceo': 0, 'Remedios': 0, 'Amalfi': 0, 'Caucasia': 0, 'Planeta Rica': 0, 'Shagún': 0, 'Sincelejo': 0, 'Ciénaga de Oro': 0, 'Cereté': 0, 'Covenas': 0, 'Tolú': 0},\n",
+    "#         'Yarumal': {'Manizales': 0, 'Medellín': 40, 'Santa Fé de Antioquia': 0, 'Dabeiba': 0, 'Chigorodó': 0, 'Arboletes': 0, 'Montería': 0, 'Barbosa': 40, 'Yarumal': 0, 'Cisneros': 0, 'Maceo': 0, 'Remedios': 0, 'Amalfi': 40, 'Caucasia': 0, 'Planeta Rica': 0, 'Shagún': 0, 'Sincelejo': 0, 'Ciénaga de Oro': 0, 'Cereté': 0, 'Covenas': 0, 'Tolú': 0},\n",
+    "#         'Cisneros': {'Manizales': 0, 'Medellín': 70, 'Santa Fé de Antioquia': 0, 'Dabeiba': 0, 'Chigorodó': 0, 'Arboletes': 0, 'Montería': 0, 'Barbosa': 0, 'Yarumal': 0, 'Cisneros': 0, 'Maceo': 70, 'Remedios': 0, 'Amalfi': 0, 'Caucasia': 0, 'Planeta Rica': 0, 'Shagún': 0, 'Sincelejo': 0, 'Ciénaga de Oro': 0, 'Cereté': 0, 'Covenas': 0, 'Tolú': 0},\n",
+    "#         'Maceo': {'Manizales': 0, 'Medellín': 0, 'Santa Fé de Antioquia': 0, 'Dabeiba': 0, 'Chigorodó': 0, 'Arboletes': 0, 'Montería': 0, 'Barbosa': 0, 'Yarumal': 0, 'Cisneros': 70, 'Maceo': 0, 'Remedios': 40, 'Amalfi': 0, 'Caucasia': 0, 'Planeta Rica': 0, 'Shagún': 0, 'Sincelejo': 0, 'Ciénaga de Oro': 0, 'Cereté': 0, 'Covenas': 0, 'Tolú': 0},\n",
+    "#         'Remedios': {'Manizales': 0, 'Medellín': 0, 'Santa Fé de Antioquia': 0, 'Dabeiba': 0, 'Chigorodó': 0, 'Arboletes': 0, 'Montería': 0, 'Barbosa': 0, 'Yarumal': 0, 'Cisneros': 0, 'Maceo': 40, 'Remedios': 0, 'Amalfi': 40, 'Caucasia': 90, 'Planeta Rica': 0, 'Shagún': 0, 'Sincelejo': 0, 'Ciénaga de Oro': 0, 'Cereté': 0, 'Covenas': 0, 'Tolú': 0},\n",
+    "#         'Amalfi': {'Manizales': 0, 'Medellín': 0, 'Santa Fé de Antioquia': 0, 'Dabeiba': 0, 'Chigorodó': 0, 'Arboletes': 0, 'Montería': 0, 'Barbosa': 0, 'Yarumal': 40, 'Cisneros': 0, 'Maceo': 0, 'Remedios': 40, 'Amalfi': 0, 'Caucasia': 0, 'Planeta Rica': 0, 'Shagún': 0, 'Sincelejo': 0, 'Ciénaga de Oro': 0, 'Cereté': 0, 'Covenas': 0, 'Tolú': 0},\n",
+    "#         'Caucasia': {'Manizales': 0, 'Medellín': 0, 'Santa Fé de Antioquia': 0, 'Dabeiba': 0, 'Chigorodó': 0, 'Arboletes': 0, 'Montería': 0, 'Barbosa': 0, 'Yarumal': 70, 'Cisneros': 0, 'Maceo': 0, 'Remedios': 90, 'Amalfi': 0, 'Caucasia': 0, 'Planeta Rica': 90, 'Shagún': 0, 'Sincelejo': 0, 'Ciénaga de Oro': 0, 'Cereté': 0, 'Covenas': 0, 'Tolú': 0},\n",
+    "#         'Montería': {'Manizales': 0, 'Medellín': 0, 'Santa Fé de Antioquia': 0, 'Dabeiba': 0, 'Chigorodó': 0, 'Arboletes': 40, 'Montería': 0, 'Barbosa': 0, 'Yarumal': 0, 'Cisneros': 0, 'Maceo': 0, 'Remedios': 0, 'Amalfi': 0, 'Caucasia': 0, 'Planeta Rica': 70, 'Shagún': 0, 'Sincelejo': 0, 'Ciénaga de Oro': 0, 'Cereté': 40, 'Covenas': 0, 'Tolú': 0},\n",
+    "#         'Planeta Rica': {'Manizales': 0, 'Medellín': 0, 'Santa Fé de Antioquia': 0, 'Dabeiba': 0, 'Chigorodó': 0, 'Arboletes': 0, 'Montería': 70, 'Barbosa': 0, 'Yarumal': 0, 'Cisneros': 0, 'Maceo': 0, 'Remedios': 0, 'Amalfi': 0, 'Caucasia': 90, 'Planeta Rica': 0, 'Shagún': 40, 'Sincelejo': 0, 'Ciénaga de Oro': 0, 'Cereté': 0, 'Covenas': 0, 'Tolú': 0},\n",
+    "#         'Shagún': {'Manizales': 0, 'Medellín': 0, 'Santa Fé de Antioquia': 0, 'Dabeiba': 0, 'Chigorodó': 0, 'Arboletes': 0, 'Montería': 0, 'Barbosa': 0, 'Yarumal': 0, 'Cisneros': 0, 'Maceo': 0, 'Remedios': 0, 'Amalfi': 0, 'Caucasia': 0, 'Planeta Rica': 40, 'Shagún': 0, 'Sincelejo': 90, 'Ciénaga de Oro': 70, 'Cereté': 0, 'Covenas': 0, 'Tolú': 0},\n",
+    "#         'Sincelejo': {'Manizales': 0, 'Medellín': 0, 'Santa Fé de Antioquia': 0, 'Dabeiba': 0, 'Chigorodó': 0, 'Arboletes': 0, 'Montería': 0, 'Barbosa': 0, 'Yarumal': 0, 'Cisneros': 0, 'Maceo': 0, 'Remedios': 0, 'Amalfi': 0, 'Caucasia': 0, 'Planeta Rica': 0, 'Shagún': 90, 'Sincelejo': 0, 'Ciénaga de Oro': 0, 'Cereté': 0, 'Covenas': 0, 'Tolú': 70},\n",
+    "#         'Ciénaga de Oro': {'Manizales': 0, 'Medellín': 0, 'Santa Fé de Antioquia': 0, 'Dabeiba': 0, 'Chigorodó': 0, 'Arboletes': 0, 'Montería': 0, 'Barbosa': 0, 'Yarumal': 0, 'Cisneros': 0, 'Maceo': 0, 'Remedios': 0, 'Amalfi': 0, 'Caucasia': 0, 'Planeta Rica': 0, 'Shagún': 70, 'Sincelejo': 0, 'Ciénaga de Oro': 0, 'Cereté': 40, 'Covenas': 0, 'Tolú': 0},\n",
+    "#         'Cereté': {'Manizales': 0, 'Medellín': 0, 'Santa Fé de Antioquia': 0, 'Dabeiba': 0, 'Chigorodó': 0, 'Arboletes': 0, 'Montería': 40, 'Barbosa': 0, 'Yarumal': 0, 'Cisneros': 0, 'Maceo': 0, 'Remedios': 0, 'Amalfi': 0, 'Caucasia': 0, 'Planeta Rica': 0, 'Shagún': 0, 'Sincelejo': 0, 'Ciénaga de Oro': 40, 'Cereté': 0, 'Covenas': 90, 'Tolú': 0},\n",
+    "#         'Covenas': {'Manizales': 0, 'Medellín': 0, 'Santa Fé de Antioquia': 0, 'Dabeiba': 0, 'Chigorodó': 0, 'Arboletes': 0, 'Montería': 0, 'Barbosa': 0, 'Yarumal': 0, 'Cisneros': 0, 'Maceo': 0, 'Remedios': 0, 'Amalfi': 0, 'Caucasia': 0, 'Planeta Rica': 0, 'Shagún': 0, 'Sincelejo': 0, 'Ciénaga de Oro': 0, 'Cereté': 90, 'Covenas': 0, 'Tolú': 70},\n",
+    "#         'Tolú': {'Manizales': 0, 'Medellín': 0, 'Santa Fé de Antioquia': 0, 'Dabeiba': 0, 'Chigorodó': 0, 'Arboletes': 0, 'Montería': 0, 'Barbosa': 0, 'Yarumal': 0, 'Cisneros': 0, 'Maceo': 0, 'Remedios': 0, 'Amalfi': 0, 'Caucasia': 0, 'Planeta Rica': 0, 'Shagún': 0, 'Sincelejo': 70, 'Ciénaga de Oro': 0, 'Cereté': 0, 'Covenas': 70, 'Tolú': 0}\n",
+    "# }\n",
+    "    \n",
+    "\n",
+    "    heuristicas = {\n",
+    "                \"Manizales\": {\"Tolú\": 90},\n",
     "                \"Medellín\": {\"Tolú\": 90},\n",
     "                \"Santa Fé de Antioquia\": {\"Tolú\": 40},\n",
     "                \"Dabeiba\": {\"Tolú\": 70},\n",
@@ -268,46 +294,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Estado Tolú, Valor -911\n",
-      "  Costo: 911\n",
+      "Estado Tolú, Valor 761\n",
+      "  Costo: 761\n",
       "  Heurística: 0\n",
-      "<--- NE [22] ---\n",
-      "Estado Coveñas, Valor -819\n",
-      "  Costo: 889\n",
+      "<--- NO [40] ---\n",
+      "Estado Sincelejo, Valor 651\n",
+      "  Costo: 721\n",
       "  Heurística: 70\n",
-      "<--- NE [73] ---\n",
-      "Estado Cereté, Valor -776\n",
-      "  Costo: 816\n",
-      "  Heurística: 40\n",
-      "<--- NE [23] ---\n",
-      "Estado Montería, Valor -753\n",
-      "  Costo: 793\n",
-      "  Heurística: 40\n",
-      "<--- E [120] ---\n",
-      "Estado Arboletes, Valor -603\n",
+      "<--- NE [48] ---\n",
+      "Estado Shagún, Valor 633\n",
       "  Costo: 673\n",
-      "  Heurística: 70\n",
-      "<--- N [177] ---\n",
-      "Estado Chigorodó, Valor -406\n",
-      "  Costo: 496\n",
-      "  Heurística: 90\n",
-      "<--- NO [109] ---\n",
-      "Estado Dabeiba, Valor -317\n",
-      "  Costo: 387\n",
-      "  Heurística: 70\n",
-      "<--- NO [103] ---\n",
-      "Estado Santa Fé de Antioquia, Valor -244\n",
-      "  Costo: 284\n",
       "  Heurística: 40\n",
-      "<--- NO [56] ---\n",
-      "Estado Medellín, Valor -138\n",
+      "<--- N [73] ---\n",
+      "Estado Planeta Rica, Valor 510\n",
+      "  Costo: 600\n",
+      "  Heurística: 90\n",
+      "<--- NO [70] ---\n",
+      "Estado Caucasia, Valor 460\n",
+      "  Costo: 530\n",
+      "  Heurística: 70\n",
+      "<--- NE [161] ---\n",
+      "Estado Yarumal, Valor 329\n",
+      "  Costo: 369\n",
+      "  Heurística: 40\n",
+      "<--- N [99] ---\n",
+      "Estado Barbosa, Valor 230\n",
+      "  Costo: 270\n",
+      "  Heurística: 40\n",
+      "<--- NE [42] ---\n",
+      "Estado Medellín, Valor 138\n",
       "  Costo: 228\n",
       "  Heurística: 90\n",
       "<--- N [228] ---\n",
@@ -340,7 +362,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
